# goit-py-web-project-team-8

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
personal_assistant/: Procfile   entrypoint.sh  manage.py
personal_assistant/contactsapp/: admin.py  apps.py  context_processors.py  forms.py  localize.py  models.py  signals.py  urls.py  views.py
personal_assistant/contactsapp/migrations/: 0001_initial.py  0002_remove_post_post_author_remove_post_post_creator_and_more.py  0003_alter_contact_address_alter_contact_birth_month_and_more.py  0004_alter_contact_birth_month.py  0005_remove_tag_creator_remove_contact_tags_and_more.py  0006_alter_group_name_en_alter_group_name_uk.py  0007_remove_group_group_of_creator_en_and_more.py  0008_alter_contact_phone.py  0009_alter_contact_phone.py
personal_assistant/contactsapp/templatetags/: month_translation.py
personal_assistant/contactsapp/utils/: utils.py
personal_assistant/filemanagerapp/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  translations.py  urls.py  views.py
personal_assistant/filemanagerapp/migrations/: 0001_initial.py
personal_assistant/filemanagerapp/templates/: file_list.html  manager_category.html  upload.html
personal_assistant/filemanagerapp/templatetags/: custom_tags.py
personal_assistant/newsapp/: translations.py  urls.py  views.py
personal_assistant/notesapp/: context_processors.py  forms.py  models.py  translations.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  translations.py  urls.py
personal_assistant/users/: forms.py  models.py  storage_avatar.py  translations.py  urls.py  views.py
(+53 files in other folders)
