[tool.poetry]
name = "personal assistant app"
version = "0.1.0"
description = "The personal assistant application, developed as a final progect of the Python web course at GoIT"
authors = ["Team 8"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
pillow = "^10.3.0"
cloudinary = "^1.40.0"
django-cloudinary-storage = "^0.3.0"
django-modeltranslation = "^0.19.4"
translations = "^0.1.3"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
dj-database-url = "^2.2.0"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
